WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183950
Resource Load Statistics: Fix decoder key isPrevalentResource->isVeryPrevalentResource
https://bugs.webkit.org/show_bug.cgi?id=183950
Summary
Resource Load Statistics: Fix decoder key isPrevalentResource->isVeryPrevalen...
John Wilander
Reported
2018-03-23 13:59:15 PDT
I made a copy/paste mistake so that when we decode statistics from disk, the isVeryPrevalentResource property overwrites the already decoded isPrevalentResource property.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-03-23 13:59:45 PDT
<
rdar://problem/38806275
>
John Wilander
Comment 2
2018-03-23 14:03:39 PDT
Committed
r229919
: <
https://trac.webkit.org/changeset/229919
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug