Resource Load Statistics: Fix decoder key isPrevalentResource->isVeryPrevalentResource https://bugs.webkit.org/show_bug.cgi?id=183950 <rdar://problem/38806275>

Reviewed by Brent Fulgham.

* loader/ResourceLoadStatistics.cpp:
(WebCore::ResourceLoadStatistics::decode):
    Now isVeryPrevalentResource is decoded to the correct field.


Canonical link: https://commits.webkit.org/199551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229919 268f45cc-cd09-0410-ab3c-d52691b4dbfc